# ElevationTile4JP

./: .gitignore  README.md  README.txt  __init__.py  convert_dem_to_geotiff_dialog_base.ui  elevation_tile_for_jp.pro  elevation_tile_for_jp.py  elevation_tile_for_jp_dialog.py  elevation_tile_for_jp_dialog_base.ui  elevation_tiles_to_geotiff.py  elevation_tiles_to_geotiff_dialog.py  elevation_tiles_to_geotiff_dialog_base.ui  get_tiles.py  metadata.txt  plugin.py  progress_dialog.py  progress_dialog.ui  pyproject.toml  resources.py  resources.qrc  test_minimal.py
.github/workflow/: release.yaml
.github/workflows/: lint.yaml  release.yml  test.yaml
GeoTiff/: merge.tiff  warp.tiff  warp.tiff.aux.xml
GsiElevationtilesConverter/: README.html  __init__.py  get_tiles.py  metadata.txt  resources.py
GsiElevationtilesConverter/elevation_tile_tools/: elevation_tile_converter.py  tile_coordinate.py
elevation_tile_tools/: __init__.py  __main__.py  elevation_array.py  elevation_tile_converter.py  geotiff.py  tile_coordinate.py
i18n/: ELEVATIONTILE4JP_en.qm  ELEVATIONTILE4JP_en.ts  ELEVATIONTILE4JP_ja.qm  ELEVATIONTILE4JP_ja.ts  ELEVATONTILE4JP_en.ts
processing_provider/: elevation_tile_algorithm.py  elevation_tile_provider.py
tests/: conftest.py  test_dialog.py
