[project]
name = "elevationtile4jp"
version = "1.0.0"
description = "Convert elevation tiles provided by Geospatial Information Authority of Japan(GSI) to GeoTiff format DEM."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.8.2",
]
